# SiameseModelMCP

./: .env.example  .gitignore  README.md  docker-compose.yml
agent/: agent.py
agent_uncomplete/: agent.py
siamese_mcp/: Dockerfile  README.md  pyproject.toml
siamese_mcp/data/: faces.json
siamese_mcp/src/siamese_mcp/: face_service.py  server.py
siamese_mcp_client/: README.md
siamese_mcp_client/src/siamese_mcp_client/: __init__.py  cli.py  client.py  models.py
siamese_mcp_client/tests/: test_client_contract.py
siamese_mcp_client_umcomplete/: README.md  pyproject.toml
siamese_mcp_client_umcomplete/src/siamese_mcp_client/: cli.py  client.py
siamese_mcp_client_umcomplete/tests/: test_client_contract.py
siamese_mcp_uncomplete/: .dockerignore  README.md  pyproject.toml
siamese_mcp_uncomplete/src/siamese_mcp/: __init__.py  db.py  face_service.py  server.py
